# FinPulse

./: .env.example  .gitignore  BENCHMARKS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/finpulse/: cli.py  config.py  log.py
src/finpulse/backtest/: __init__.py  runner.py
src/finpulse/bench/: __init__.py  throughput.py
src/finpulse/features/: __init__.py  build.py  sentiment.py  tickers.py
src/finpulse/ingest/: __init__.py  base.py  hackernews.py
src/finpulse/market/: __init__.py  mock.py
src/finpulse/monitoring/: __init__.py  metrics.py
src/finpulse/signals/: __init__.py  build.py
src/finpulse/storage/: __init__.py  parquet_sink.py
tests/: test_backtest.py  test_features.py  test_market.py  test_parquet_sink.py  test_sentiment.py  test_signals.py  test_throughput.py  test_tickers.py
